--- a/iOS/BLESerialSample/Base.lproj/Main.storyboard
+++ b/iOS/BLESerialSample/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14B23" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14B23" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="dpF-Zj-sz0">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
@@ -51,6 +51,132 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="323" y="211"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="rVU-SS-n9g">
+            <objects>
+                <navigationController id="dpF-Zj-sz0" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ULg-b5-QjT">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="n9C-O4-9we" kind="relationship" relationship="rootViewController" id="YdD-Tq-MGA"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qib-Lj-RQu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="323" y="943"/>
+        </scene>
+        <!--Map View Controller-->
+        <scene sceneID="xrE-VI-hmM">
+            <objects>
+                <viewController id="n9C-O4-9we" customClass="MapViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="kcr-j0-ZWj"/>
+                        <viewControllerLayoutGuide type="bottom" id="ucA-WR-XEE"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Dne-gF-3zS">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VuY-Ix-s8V">
+                                <rect key="frame" x="137" y="269" width="46" height="30"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="Cop-Tc-QWy" kind="push" id="MSt-S3-nRF"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="AXA-gu-qZ4"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="f0y-MM-2Aw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="742" y="943"/>
+        </scene>
+        <!--Solid View Controller-->
+        <scene sceneID="Bf0-xO-jBa">
+            <objects>
+                <viewController id="Cop-Tc-QWy" customClass="SolidViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="kTn-Y9-Wgp"/>
+                        <viewControllerLayoutGuide type="bottom" id="JMB-4Z-YnA"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="9wx-fU-vMn">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FTV-W7-93K">
+                                <rect key="frame" x="137" y="269" width="46" height="30"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="cOs-dR-p48" kind="push" id="6WS-HT-25V"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="dPf-c3-bF1"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6Dc-KL-yv5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1155" y="943"/>
+        </scene>
+        <!--Floor View Controller-->
+        <scene sceneID="ihJ-Pg-jZz">
+            <objects>
+                <viewController id="cOs-dR-p48" customClass="FloorViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="rDg-E1-Cqn"/>
+                        <viewControllerLayoutGuide type="bottom" id="ycp-aS-loI"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="1Aw-TE-Gt1">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tsb-Pw-s4b">
+                                <rect key="frame" x="137" y="269" width="46" height="30"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="3g4-Pf-aas" kind="push" id="6IN-yk-xRg"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Glw-Vi-4V9"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="f6G-PX-CcN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1532" y="943"/>
+        </scene>
+        <!--Floor Detail View Controller-->
+        <scene sceneID="R59-P9-z8j">
+            <objects>
+                <viewController id="3g4-Pf-aas" customClass="FloorDetailViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="UOX-Xq-6CU"/>
+                        <viewControllerLayoutGuide type="bottom" id="LZS-JJ-tNm"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="CDH-NP-hI2">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="GdE-Gt-FwH"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rF6-ay-YKK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1915" y="943"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
